test/testData/parser/negative/statements/continue.err
test/testData/parser/negative/statements/continue.c:5:3: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:11:3: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:16:3: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:22:3: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:26:3: error: 'continue' statement not in loop statement
test/testData/parser/negative/statements/continue.c:34:3: error: 'continue' statement not in loop statement
